grammar.js
        source_file: $ => seq(
            repeat(choice($.directive, $._newline)),
            choice(
                $.diagram_sequence,
                $.diagram_class,
                $.diagram_state,
                $.diagram_gantt,
                $.diagram_pie,
                $.diagram_flow,
                $.diagram_er,
                $.diagram_mindmap,
                $.diagram_gitgraph,
                $.diagram_journey,
                $.diagram_quadrant_chart,
                $.diagram_xy_chart,
                $.diagram_timeline,
                $.diagram_zenuml,
                $.diagram_sankey,
                $.diagram_block,
                $.diagram_packet,
                $.diagram_kanban,
                $.diagram_architecture,
                $.diagram_radar,
                $.diagram_treemap,
                $.diagram_c4,
                $.diagram_requirement,
        )),

        _flowchart_direction: $ => choice(
            $.flowchart_direction_lr,
            $.flowchart_direction_rl,
            $.flowchart_direction_tb,
            $.flowchart_direction_bt,
        ),

        _flow_stmt: $ => choice(
            $.flow_stmt_vertice,
            $.flow_stmt_style,
            // $.flow_stmt_linkstyle,
            $.flow_stmt_classdef,
            $.flow_stmt_class,
            $.flow_stmt_click,
            $.flow_stmt_subgraph,
            prec(1, $.flow_stmt_direction),
        ),

        flow_stmt_direction: $ => seq(kwd("direction"), $._flowchart_direction),

        // Style / class directives (issue #7, #57) — structured: expose node ID and class name
        // as named CST children; CSS body is parsed as a structured css_property_list.
        flow_stmt_style: $ => seq(kwd("style"), $.flow_vertex_id, optional($.css_property_list)),
        flow_stmt_classdef: $ => seq(kwd("classDef"), $.classdef_name, optional($.css_property_list)),

        // CSS property list: comma-separated key:value pairs (issue #57).
        // Value token is permissive — stops at comma or newline; semantic validation in Analyzer.
        // css_property_name allows leading digits so that orphan numeric segments from CSS values
        // that contain commas (e.g. stroke-dasharray: 9,5) produce no ERROR nodes; the Analyzer
        // skips css_pair nodes that have no css_value child.
        css_property_list: $ => sep($.css_pair, ","),
        css_pair: $ => seq($.css_property_name, optional(seq(":", $.css_value))),
        css_property_name: $ => /[a-zA-Z0-9][a-zA-Z0-9-.]*/,
        css_value: $ => /[^,\n]+/,
        // `class A,B,C myStyle` — comma-separated node IDs then a class name.
        // Commas must be written without surrounding spaces (Mermaid's parser requirement).
        flow_stmt_class: $ => seq(kwd("class"), sep($.flow_vertex_id, ","), optional($.classdef_name)),

        // Shared name token for classDef definitions and class assignments.
        classdef_name: $ => $._flow_vertex_id_token,

        // Inline class application suffix reference: `A:::className`
        flow_class_ref: $ => $._flow_vertex_id_token,

        // Click event handlers (issue #9) — permissive stub
        flow_stmt_click: $ => seq(kwd("click"), /[^\n]*/),

        flow_stmt_vertice: $ => sep($.flow_node, $._flow_link),

        flow_node: $ => sep($.flow_vertex, "&"),

        _flow_link: $ => choice(
            $.flow_link_simplelink,
            $.flow_link_arrowtext,
            $.flow_link_middletext,
            $.flow_link_invisible_link,
            $.flow_link_invalid_arrow,
        ),

        // `->` is not a valid flowchart arrow (requires `-->`). Named as a grammar rule
        // so the full two-character token is captured as a CST node rather than producing
        // an ERROR node containing only `-`. The analyzer emits a semantic diagnostic.
        flow_link_invalid_arrow: $ => token(prec(1, "->")),

        flow_link_simplelink: $ => seq($.flow_link_arrow),
        flow_link_invisible_link: $ => seq($.flow_link_invisible),
        flow_link_arrowtext: $ => seq($.flow_link_arrow, "|", $.flow_arrow_text, "|"),
        flow_link_middletext: $ => seq(
            $.flow_link_arrow_start,
            alias($._flow_arrow_text_mid, $.flow_arrow_text),
            $.flow_link_arrow,
        ),
        // Pipe-delimited label (-->|text|): allow full flow_text_literal so dashes, colons,
        // slashes, etc. work without quoting (the | delimiter resolves ambiguity).
        flow_arrow_text: $ => choice($.flow_text_literal, $.flow_text_quoted),
        // Middle-text label (-- text -->): must not allow consecutive dashes which would be
        // greedily consumed over the closing arrow token; keep the original alpha-num-token
        // behaviour so the arrow is always unambiguously tokenised.
        _flow_arrow_text_mid: $ => repeat1(choice($._alpha_num_token, $.flow_text_quoted)),

        flow_vertex_id: $ => choice(
            $._flow_vertex_id_token,
            alias(kwd("direction"), $._flow_vertex_id_token),
        ),

        flow_vertex: $ => seq(
            $.flow_vertex_id,
            optional($._flow_vertex_kind),
            // Class application suffix: A:::className (issue #7)
            optional(seq(":::", $.flow_class_ref)),
        ),
        _flow_vertex_kind: $ => choice(
            $.flow_vertex_double_circle,  // must come before flow_vertex_circle (((vs(() — issue #9
            $.flow_vertex_square,
            $.flow_vertex_circle,
            $.flow_vertex_ellipse,
            $.flow_vertex_stadium,
            $.flow_vertex_subroutine,
            $.flow_vertex_rect,
            $.flow_vertex_cylinder,
            $.flow_vertex_round,
            $.flow_vertex_diamond,
            $.flow_vertex_hexagon,
            $.flow_vertex_odd,
            $.flow_vertex_trapezoid,
            $.flow_vertex_inv_trapezoid,
            $.flow_vertex_leanright,
            $.flow_vertex_leanleft,
            $.flow_vertex_annotation,
        ),
        flow_vertex_annotation: $ => seq(
            "@{",
            optional($._newline),
            optional(seq(
                $.flow_annotation_pair,
                repeat(seq(
                    optional(","),
                    optional($._newline),
                    $.flow_annotation_pair,
                )),
                optional(","),
                optional($._newline),
            )),
            "}",
        ),
        flow_annotation_pair: $ => seq(
            $.flow_annotation_key,
            ":",
            choice($.flow_annotation_value_quoted, $.flow_annotation_value_bare),
        ),
        flow_annotation_key: $ => /[a-zA-Z][a-zA-Z0-9-]*/,
        flow_annotation_value_quoted: $ => choice(/"([^"\\]|\\.)*"/, /'([^'\\]|\\.)*'/),
        flow_annotation_value_bare: $ => token(/[a-zA-Z0-9_~!?.-]+([ \t]+[a-zA-Z0-9_~!?.-]+)*/),
        flow_vertex_square: $ => seq( "[", $._flow_text_slash, "]" ),
        flow_vertex_double_circle: $ => seq("(((", $._flow_text_slash, ")))"),  // issue #9: triple-paren
        flow_vertex_circle: $ => seq("((", $._flow_text_slash, "))"),
        flow_vertex_stadium: $ => seq("([", $._flow_text_slash, "])"),
        flow_vertex_subroutine: $ => seq("[[", $._flow_text_slash, "]]"),
        flow_vertex_cylinder: $ => seq("[(", $._flow_text_slash, ")]"),
        flow_vertex_round: $ => seq("(", $._flow_text_slash, ")"),
        flow_vertex_diamond: $ => seq( "{", $._flow_text_slash, "}" ),
        flow_vertex_hexagon: $ => seq( "{{", $._flow_text_slash, "}}" ),
        flow_vertex_odd: $ => seq( ">", $._flow_text_slash, "]" ),
        flow_vertex_trapezoid: $ => seq( "[/", $._flow_text, "\\]" ),
        flow_vertex_inv_trapezoid: $ => seq( "[\\", $._flow_text, "/]" ),
        flow_vertex_leanright: $ => seq("[/", $._flow_text, "/]" ),
        flow_vertex_leanleft: $ => seq( "[\\", $._flow_text, "\\]" ),
        _flow_text: $ => choice($.flow_text_literal, $.flow_text_quoted, $.flow_text_icon),
        _flow_text_slash: $ => choice($.flow_text_literal_slash, $.flow_text_quoted, $.flow_text_icon),

        flow_stmt_subgraph: $ => seq(
            "subgraph",
            optional(
                seq(
                    // Accept quoted names in addition to plain identifiers (issue #9)
                    choice($.flow_vertex_text, $.flow_text_quoted),
                    optional(seq("[", choice($.flow_vertex_text, $.flow_text_quoted), "]")),
                ),
            ),
            choice(";", $._newline),
            optional($.flow_stmt_subgraph_inner),
            "end",
        ),
        flow_stmt_subgraph_inner: $ => repeat1(choice(seq($._flow_stmt, choice($._newline, ";")), $._newline, $.comment)),
        flow_vertex_text: $ => repeat1($._alpha_num_token),

        /// ER diagram
